[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/stages/stage_snake_game.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/buttons/button_play_again.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/buttons/button_return_to_menu_32.png" type="Texture" id=3]

[node name="stage_snake_game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="canvas" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="panel_score" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="label_high_score_value" type="Label" parent="panel_score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_high_score_text" type="Label" parent="panel_score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "High Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_score_value" type="Label" parent="panel_score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_score_text" type="Label" parent="panel_score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel_game_over" type="Panel" parent="."]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="label_game_over" type="Label" parent="panel_game_over"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CenterContainer" type="CenterContainer" parent="panel_game_over"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 1280.0
margin/bottom = 720.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="panel_game_over/CenterContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 464.0
margin/top = 230.0
margin/right = 816.0
margin/bottom = 362.0
alignment = 0

[node name="button_play_again" type="TextureButton" parent="panel_game_over/CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )

[node name="button_return_to_menu" type="TextureButton" parent="panel_game_over/CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 68.0
margin/right = 352.0
margin/bottom = 132.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )


